<resources>
    <string name="app_name">Contacts</string>
    <string name="contactNamePlaceholderText">Enter Name</string>
    <string name="contactNumberPlaceholderText">Enter Phone</string>
    <string name="addButtonText">Add</string>
    <string name="findButtonText">Find</string>
    <string name="ascentButtonText">ASC</string>
    <string name="descendButtonText">DESC</string>
    <string name="contactsNamePlaceholderText">Contact\'s Name</string>
    <string name="phoneNumberPlaceholderText">Phone Number</string>
    <string name="deleteButtonImageDescription">Red Garbage Can Icon</string>
</resources>