<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".ui.main.MainFragment">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:gravity="center">

            <EditText
                android:id="@+id/contactName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints="productQuantityLabel"
                android:ems="10"
                android:hint="@string/contactNamePlaceholderText"
                android:inputType="textPersonName"
                android:textColorHint="#757575"
                tools:ignore="DuplicateSpeakableTextCheck,TouchTargetSizeCheck" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:gravity="center">

            <EditText
                android:id="@+id/contactNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints="productQuantityLabel"
                android:ems="10"
                android:hint="@string/contactNumberPlaceholderText"
                android:inputType="phone"
                android:textColorHint="#757575"
                tools:ignore="DuplicateSpeakableTextCheck,TouchTargetSizeCheck,TouchTargetSizeCheck" />
        </TableRow>

    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/addButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/addButtonText"
            android:text="@string/addButtonText" />

        <Button
            android:id="@+id/findButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/findButtonText"
            android:text="@string/findButtonText" />

        <Button
            android:id="@+id/ascendButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/ascentButtonText"
            android:text="@string/ascentButtonText" />

        <Button
            android:id="@+id/descButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/descendButtonText"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/contact_recycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp" />
</LinearLayout>